# pglu-ai-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
pglu/: __init__.py  ai.py  assistant.py  audio.py  cli.py  config.py  desktop.py  gui.py  memory.py  persona.py  util.py  voice.py  wake.py
pglu/skills/: __init__.py  apps.py  base.py  fun.py  knowledge.py  memory.py  productivity.py  run.py  system.py  web.py
scripts/: make_icon.py
tests/: test_core.py
