[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pglu-ai-assistant"
version = "1.0.0"
description = "A privacy-first, plugin-based desktop voice/text assistant (Jarvis-style) in pure Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aashish Bharti" }]
keywords = ["assistant", "voice-assistant", "jarvis", "cli", "speech", "automation", "personal-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []  # core features run on the standard library alone

# Speech output (pyttsx3) + the recognition library — install cleanly (no compiler).
voice = ["SpeechRecognition>=3.10", "pyttsx3>=2.90"]
# Microphone input (voice commands / wake-word). PyAudio sometimes needs build tools — see README.
mic = ["PyAudio>=0.2.13"]
# System info (battery / CPU / RAM).
system = ["psutil>=5.9"]
# "Jarvis mode" wake triggers (wheels, no compiler):
wake = ["pynput>=1.7"]                          # global hotkey
clap = ["sounddevice>=0.4.6", "numpy>=1.24"]   # double-clap detection
# Installs cleanly on every platform (no C compiler): voice + system + hotkey wake.
full = ["SpeechRecognition>=3.10", "pyttsx3>=2.90", "psutil>=5.9", "pynput>=1.7"]
# Absolutely everything (mic + clap may need extra setup on some systems).
everything = ["SpeechRecognition>=3.10", "pyttsx3>=2.90", "PyAudio>=0.2.13", "psutil>=5.9", "pynput>=1.7", "sounddevice>=0.4.6", "numpy>=1.24"]
dev = ["pytest", "ruff", "pillow"]

[project.scripts]
pglu = "pglu.cli:main"

[project.gui-scripts]
pglu-gui = "pglu.gui:run_gui"

[project.urls]
Homepage = "https://github.com/aashishbharti04/pglu-ai-assistant"
Issues = "https://github.com/aashishbharti04/pglu-ai-assistant/issues"

[tool.hatch.build.targets.wheel]
packages = ["pglu"]

[tool.hatch.build.targets.wheel.force-include]
"pglu/assets/pglu.ico" = "pglu/assets/pglu.ico"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E701", "E702", "E741", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
