[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pglu-ai-assistant"
version = "1.0.0"
description = "A privacy-first, plugin-based desktop voice/text assistant (Jarvis-style) in pure Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aashish Bharti" }]
keywords = ["assistant", "voice-assistant", "jarvis", "cli", "speech", "automation", "personal-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []  # core features run on the standard library alone

[project.optional-dependencies]
# Everything below installs from prebuilt wheels — NO C compiler needed.
voice = ["SpeechRecognition>=3.10", "pyttsx3>=2.90"]            # speak replies + recognition lib
mic = ["SpeechRecognition>=3.10", "sounddevice>=0.4.6", "numpy>=1.24"]  # mic input (sounddevice, not PyAudio)
system = ["psutil>=5.9"]                                         # battery / CPU / RAM
wake = ["pynput>=1.7"]                                           # global-hotkey wake
clap = ["sounddevice>=0.4.6", "numpy>=1.24"]                     # double-clap wake
tray = ["pystray>=0.19", "pillow>=10"]                           # system-tray icon
# The full hands-free experience — installs cleanly on every platform, no compiler:
full = ["SpeechRecognition>=3.10", "pyttsx3>=2.90", "psutil>=5.9", "pynput>=1.7", "sounddevice>=0.4.6", "numpy>=1.24", "pystray>=0.19", "pillow>=10"]
everything = ["SpeechRecognition>=3.10", "pyttsx3>=2.90", "psutil>=5.9", "pynput>=1.7", "sounddevice>=0.4.6", "numpy>=1.24", "pystray>=0.19", "pillow>=10"]
dev = ["pytest", "ruff", "pillow"]

[project.scripts]
pglu = "pglu.cli:main"

[project.gui-scripts]
pglu-gui = "pglu.gui:run_gui"

[project.urls]
Homepage = "https://github.com/aashishbharti04/pglu-ai-assistant"
Issues = "https://github.com/aashishbharti04/pglu-ai-assistant/issues"

[tool.hatch.build.targets.wheel]
packages = ["pglu"]

[tool.hatch.build.targets.wheel.force-include]
"pglu/assets/pglu.ico" = "pglu/assets/pglu.ico"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E701", "E702", "E741", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
